Prevent page image on document detail page from overflowing its parent.

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -438,6 +438,8 @@ main.document-detail-page {
 
 #page-display img {
     height: calc(100% - 10px);
+    object-fit: contain;
+    max-width: 100%;
 }
 
 #page-metadata-container {
